@@ -1,5 +1,6 @@
-	Release 0.4.7
+	r78
 - Updated to RIFT 2.2
+- Fixed item categories (Crafting > Materials > Hide renamed to Crafting > Materials > Butchering)
 
 	Release 0.4.5
 - New Search Tab:
